[build-system]
requires = ['setuptools>=45', 'setuptools-scm[toml]>=6.2']
build-backend = 'setuptools.build_meta'

[project]
name = 'pytest-logikal'
description = 'Common testing environment'
readme = 'README.rst'
requires-python = '~= 3.8'
license = {file = 'LICENSE.txt'}
authors = [{name = 'Logikal GmbH', email = 'contact@logikal.io'}]
keywords = ['pytest']
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: MIT License',
  'Operating System :: POSIX :: Linux',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.8',
  'Framework :: Pytest',
  'Topic :: Software Development',
  'Typing :: Typed',
]
dynamic = ['version', 'entry-points', 'dependencies', 'optional-dependencies']

[project.urls]
'Documentation' = 'https://docs.logikal.io/pytest-logikal/'
'Release notes' = 'https://github.com/logikal-io/pytest-logikal/releases'
'Issue tracker' = 'https://github.com/logikal-io/pytest-logikal/issues'
'Source code' = 'https://github.com/logikal-io/pytest-logikal'

[tool.setuptools]
packages = ['pytest_logikal', 'pytest_logikal.browser']

[tool.setuptools.dynamic]
entry-points = {file = 'entry_points.ini'}
dependencies = {file = 'requirements/core.txt'}

[tool.setuptools.dynamic.optional-dependencies]
black = {file = 'requirements/extras/black.txt'}
browser = {file = 'requirements/extras/browser.txt'}
django = {file = 'requirements/extras/django.txt'}

[tool.setuptools.package-data]
pytest_logikal = [
  'py.typed', 'package.json', 'package-lock.json',
  'bandit_config.yml', 'css_config.yml', 'js_config.yml',
]

[tool.setuptools_scm]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = 'tests.website.settings'
norecursedirs = [
  '*.egg', '.*', 'build', 'dist', 'node_modules',  # standard folders
  'tests/pytest_logikal/files',  # ignore files used inside plugin runs
]

[tool.mypy]
plugins = ['mypy_django_plugin.main']  # see https://github.com/python/mypy/issues/11667

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  'PIL',  # https://github.com/python-pillow/Pillow/issues/2625
  'django_migration_linter.*',  # https://github.com/3YOURMIND/django-migration-linter/issues/238
  'factory.*',
  'pycodestyle',
  'pydocstyle',
  'xdist.*',
]

[tool.browser.versions]
# See https://googlechromelabs.github.io/chrome-for-testing/#stable
chrome = '127.0.6533.99'
# See https://learn.microsoft.com/en-us/deployedge/microsoft-edge-relnote-stable-channel
edge = '126.0.2592.113'

[tool.isort]
known_first_party = ['pytest_logikal']

[tool.coverage.report]
omit = [
  '/tmp/*',  # ignore temporary files created during testing
  'tests/pytest_logikal/files/*',  # ignore files used inside plugin runs
]
exclude_lines = [
  'pragma: no cover',
  '\.\.\.',  # exclude abstract methods
]
